--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   width: 100%;
 
-  #sam-autocomplete-results {
+  #sam-autocomplete-results, #sam-autocomplete-results-kv {
     width: 100%;
     max-height: 12rem;
     overflow-y: scroll;
