--- a/src/app/role-management/permission-selector/permission-selector.html
+++ b/src/app/role-management/permission-selector/permission-selector.html
@@ -33,7 +33,7 @@
         <em *ngIf="option.isNew">New</em>&nbsp;
       </div>
       <div class="usa-width-one-third">
-        <label [attr.for]="option.label">{{option.label}}</label>
+        <label [attr.for]="option.label">{{option.label}}&nbsp;</label>
       </div>
       <div class="usa-width-one-twelfth">        &nbsp;
         <div class="pull-right">
