--- a/src/app/role-management/object-details/object-details.page.html
+++ b/src/app/role-management/object-details/object-details.page.html
@@ -29,7 +29,7 @@
   <!-- Cancel / Submit -->
   <div class="clearfix">
     <div class="pull-right">
-      <button class="usa-button-outline" routerLink="/access/objects">Cancel</button>
+      <button class="usa-button-outline" routerLink="/access/workspace">Cancel</button>
       <button class="usa-button-primary" (click)="onSubmitClick()">Submit</button>
     </div>
   </div>
