--- a/src/app/Help/sections/award-data/award-data.template.html
+++ b/src/app/Help/sections/award-data/award-data.template.html
@@ -16,34 +16,42 @@
               <span>Federal Business Opportunites</span>
             </div>
           </div>
-          <div class="usa-width-one-whole p_L-4x m_B-2x m_T-1x">
-            <h3>Features:</h3>
-            <span class="awards-data-label m_R-3x">Search/Display</span>
-            <span class="awards-data-label m_R-3x">Data Entry</span>
+          <div class="usa-width-one-whole p_L-4x m_B-2x m_T-1x relative">
+            <h3>
+              <span>
+                Features
+                <i class="fa fa-caret-square-o-down awards-mid-icon" aria-hidden="true" *ngIf="isEdit"></i>
+                <span *ngIf="!isEdit">:</span>
+              </span>
+            </h3>
+            <div class="usa-width-one-whole" *ngIf="isEdit">
+              <samMultiSelectDropdown class="usa-width-one-whole"
+                                      [(model)]="features"
+                                      [label]="types.label"
+                                      [options]="types.options"
+                                      [name]="'features'"
+                                      (modelChange)="onParamChanged()">
+
+              </samMultiSelectDropdown>
+            </div>
+            <div class="usa-width-one-whole">
+              <span class="awards-data-label m_R-3x m_B-2x" *ngFor="let featureItem of features">
+                {{featureItem}} &nbsp;<i class="fa fa-times" *ngIf="isEdit" (click)="onRemoveFeatureClick(featureItem)"></i>
+              </span>
+            </div>
           </div>
-          <div class="usa-width-one-whole p_L-4x m_T-2x">
-            <h3>Splash Language Lorem Lipsum accusam iudicabit cu.
-              Ad verterem scripserit pro, falli apeirian ad est, vis</h3>
+          <div class="usa-width-one-whole p_L-4x m_T-2x p_R-4x">
+            <h3 *ngIf="!isEdit" class="p_R-4x">{{opportunityConfig.splashContent}}</h3>
+            <textarea class="awards-splash-input" rows="5" *ngIf="isEdit" [(ngModel)]="opportunityConfig.splashContent">{{opportunityConfig.splashContent}}</textarea>
           </div>
         </div>
-        <div class="usa-width-one-third awards-black-border p_All-3x">
-          <h3>Common Terms</h3>
-          <div class="usa-width-one-whole m_B-2x">
-            <span>Word &nbsp;&nbsp; <i class="fa fa-times"></i></span>
-            <div class="usa-width-one-whole awards-black-border">
-              Definition Lipsum
-            </div>
-          </div>
-          <div class="usa-width-one-whole m_B-2x">
-            <span>Word &nbsp;&nbsp; <i class="fa fa-times"></i></span>
-            <div class="usa-width-one-whole awards-black-border">
-              Definition Lipsum
-            </div>
-          </div>
-          <div class="usa-width-one-whole m_B-2x">
-            <span>Word &nbsp;&nbsp; <i class="fa fa-times"></i></span>
-            <div class="usa-width-one-whole awards-black-border">
-              Definition Lipsum
+        <div class="usa-width-one-third awards-black-border p_All-3x awards-terms-div">
+          <h3>Common Terms &nbsp;<i class="fa fa-plus-square-o" aria-hidden="true" *ngIf="isEdit" (click)="onAddTermClick()"></i></h3>
+          <div class="usa-width-one-whole m_B-2x" *ngFor="let term of commonTerms">
+            <span>{{term.termName}} &nbsp;&nbsp; <i class="fa fa-times" *ngIf="isEdit" (click)="onRemoveTermClick(term)"></i></span>
+            <div class="usa-width-one-whole">
+              <p class="p_T-1x p_L-2x" *ngIf="!isEdit">{{term.termContent}}</p>
+              <input class="usa-width-one-whole awards-terms-input" type="text" *ngIf="isEdit" [(ngModel)]="term.termContent">
             </div>
           </div>
         </div>
@@ -51,15 +59,12 @@
 
       <div class="usa-width-one-whole m_T-2x">
         <h4 class="p_L-4x">Sub Header</h4>
-        <p class="p_L-4x">
-          Albucius lobortis ius et, sea debet inimicus ne,
-          nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-          ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-          deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-          fuisset convenire
+        <p class="p_L-4x" *ngIf="!isEdit">{{opportunityConfig.subContent}}</p>
+        <textarea class="m_L-4x awards-content-input" rows="5" *ngIf="isEdit" [(ngModel)]="opportunityConfig.subContent">{{opportunityConfig.subContent}}</textarea>
 
-        </p>
-        <button class="usa-button-transparent pull-right">Edit this page <i class="fa fa-edit"></i></button>
+        <button class="usa-button-transparent pull-right" (click)="onEditPageClick()" *ngIf="!isEdit">Edit this page <i class="fa fa-edit awards-larger-icon"></i></button>
+        <button class="usa-button-transparent pull-right p_L-1x awards-large-icon m_B-0" (click)="onSaveEditPageClick()" *ngIf="isEdit"> <i class="fa fa-save"></i></button>
+        <button class="usa-button-transparent pull-right p_R-1x awards-large-icon" (click)="onCancelEditPageClick()" *ngIf="isEdit"> <i class="fa fa-times"></i></button>
 
       </div>
 
