--- a/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
@@ -27,4 +27,13 @@
              [formControlName] = "'treasuryDeptCode'"
     ></samText>
   </div>
+
+  <div>
+    <div class="pull-left">
+      <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
+      <samButton buttonText="Previous" (onClick)="onPreviousClick($event)"></samButton>
+      <samButton [buttonType]="(otherFinancialInfoGroup.valid ? 'default' : 'disabled')" buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
+      <samButton [buttonType]="(otherFinancialInfoGroup.valid ? 'default' : 'disabled')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
+    </div>
+  </div>
 </div>
