Contact Information Add/Edit form

--- a/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
@@ -131,8 +131,8 @@
 
         </div> <!-- End of newcontact -->
         <samButton buttonText="Cancel" (onClick)="onSubFormCancelClick()"></samButton>
-        <!--<samButton buttonText="Confirm"  (onClick)="onConfirmClick()"></samButton>-->
-        <samButton buttonText="Confirm" [buttonType]="(!falContactInfoForm.controls.contacts.controls[i].valid ? 'disabled' : 'default')" (onClick)="onConfirmClick()"></samButton>
+        <samButton buttonText="Confirm"  (onClick)="onConfirmClick()"></samButton>
+        <!--<samButton buttonText="Confirm" [buttonType]="(!falContactInfoForm.controls.contacts.controls[i].valid ? 'disabled' : 'default')" (onClick)="onConfirmClick()"></samButton>-->
       </div> <!-- End of formgroup div -->
     </ng-container>
   </div>
