--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -4,26 +4,29 @@
               [hint]="hint"
               [required]="required">
 
-  <labelWrapper #codeLabel
-                [name]="codeLabelName"
-                [label]="'Code'"
-                [hint]="codeHint"
-                [required]="true">
+  <form [formGroup]="codeGroup">
+    <labelWrapper #codeLabel
+                  [name]="codeLabelName"
+                  [label]="'Code'"
+                  [hint]="codeHint"
+                  [required]="true">
 
-    <div class="usa-grid-full">
-      <div class="usa-width-one-whole">
-        <ng-container *ngFor="let textbox of codeTextboxes; let isLast = last">
-          <!-- todo: don't hardcode maxwidth -->
-          <samText [name]="textbox.name"
-                   [maxlength]="textbox.length"
-                   [style.display]="'inline-block'"
-                   [style.maxWidth]=".9*textbox.length + 2.55 + 'rem'"
-                   [formControl]="textbox.control"
-          ></samText>
-          {{isLast ? '' : '-'}}
-        </ng-container>
+      <div class="usa-grid-full">
+        <div class="usa-width-one-whole">
+          <ng-container *ngFor="let textbox of codeTextboxes; let isLast = last">
+            <!-- todo: don't hardcode maxwidth -->
+            <samText [name]="textbox.name"
+                     [maxlength]="textbox.length"
+                     [style.display]="'inline-block'"
+                     [style.maxWidth]=".9*textbox.length + 2.55 + 'rem'"
+                     [formControl]="textbox.control"
+            ></samText>
+            {{isLast ? '' : '-'}}
+          </ng-container>
+        </div>
       </div>
-    </div>
+
+    </labelWrapper>
 
     <samTextArea [name]="textareaName"
                  [placeholder]="textareaPlaceholder"
@@ -31,7 +34,5 @@
                  [hidden]="textareaHidden"
                  [formControl]="textareaControl"
     ></samTextArea>
-
-  </labelWrapper>
-
+  </form>
 </labelWrapper>
