wip: Integrate awards data content

--- a/src/app/Help/sections/award-data/award-data.template.html
+++ b/src/app/Help/sections/award-data/award-data.template.html
@@ -1,7 +1,7 @@
 <section class="awards-data">
   <h2 class="m_T-2x">Award Data</h2>
   <div class="usa-grid-full">
-    <h3 id="opportunities" class="p_L-3x">Opportunities</h3>
+    <h3 id="opportunities" class="p_L-3x">{{curConfig.heading}}</h3>
     <div class="usa-width-one-whole awards-black-border m_L-3x">
 
       <div class="usa-width-one-whole m_T-3x">
@@ -13,7 +13,7 @@
             </div>
             <div class="usa-width-five-sixths">
               <h3 class="m_B-0 p_B-1x">Legacy Website:</h3>
-              <span>Federal Business Opportunites</span>
+              <span>{{curConfig.legacyWebsiteContent}}</span>
             </div>
           </div>
           <div class="usa-width-one-whole p_L-4x m_B-2x m_T-1x relative">
@@ -26,28 +26,28 @@
             </h3>
             <div class="usa-width-one-whole" *ngIf="isEdit">
               <samMultiSelectDropdown class="usa-width-one-whole"
-                                      [(model)]="features"
-                                      [label]="types.label"
-                                      [options]="types.options"
+                                      [(model)]="curFeatures"
+                                      [label]="curTypes.label"
+                                      [options]="curTypes.options"
                                       [name]="'features'"
                                       (modelChange)="onParamChanged()">
 
               </samMultiSelectDropdown>
             </div>
             <div class="usa-width-one-whole">
-              <span class="awards-data-label m_R-3x m_B-2x" *ngFor="let featureItem of features">
+              <span class="awards-data-label m_R-3x m_B-2x" *ngFor="let featureItem of curFeatures">
                 {{featureItem}} &nbsp;<i class="fa fa-times" *ngIf="isEdit" (click)="onRemoveFeatureClick(featureItem)"></i>
               </span>
             </div>
           </div>
           <div class="usa-width-one-whole p_L-4x m_T-2x p_R-4x">
-            <h3 *ngIf="!isEdit" class="p_R-4x">{{opportunityConfig.splashContent}}</h3>
-            <textarea class="awards-splash-input" rows="5" *ngIf="isEdit" [(ngModel)]="opportunityConfig.splashContent">{{opportunityConfig.splashContent}}</textarea>
+            <h3 *ngIf="!isEdit" class="p_R-4x">{{curConfig.splashContent}}</h3>
+            <textarea class="awards-splash-input" rows="5" *ngIf="isEdit" [(ngModel)]="curConfig.splashContent">{{curConfig.splashContent}}</textarea>
           </div>
         </div>
         <div class="usa-width-one-third awards-black-border p_All-3x awards-terms-div">
           <h3>Common Terms &nbsp;<i class="fa fa-plus-square-o" aria-hidden="true" *ngIf="isEdit" (click)="onAddTermClick()"></i></h3>
-          <div class="usa-width-one-whole m_B-2x" *ngFor="let term of commonTerms">
+          <div class="usa-width-one-whole m_B-2x" *ngFor="let term of curCommonTerms">
             <span>{{term.termName}} &nbsp;&nbsp; <i class="fa fa-times" *ngIf="isEdit" (click)="onRemoveTermClick(term)"></i></span>
             <div class="usa-width-one-whole">
               <p class="p_T-1x p_L-2x" *ngIf="!isEdit">{{term.termContent}}</p>
@@ -59,8 +59,8 @@
 
       <div class="usa-width-one-whole m_T-2x">
         <h4 class="p_L-4x">Sub Header</h4>
-        <p class="p_L-4x" *ngIf="!isEdit">{{opportunityConfig.subContent}}</p>
-        <textarea class="m_L-4x awards-content-input" rows="5" *ngIf="isEdit" [(ngModel)]="opportunityConfig.subContent">{{opportunityConfig.subContent}}</textarea>
+        <p class="p_L-4x" *ngIf="!isEdit">{{curConfig.subContent}}</p>
+        <textarea class="m_L-4x awards-content-input" rows="5" *ngIf="isEdit" [(ngModel)]="curConfig.subContent">{{curConfig.subContent}}</textarea>
 
         <button class="usa-button-transparent pull-right" (click)="onEditPageClick()" *ngIf="!isEdit">Edit this page <i class="fa fa-edit awards-larger-icon"></i></button>
         <button class="usa-button-transparent pull-right p_L-1x awards-large-icon m_B-0" (click)="onSaveEditPageClick()" *ngIf="isEdit"> <i class="fa fa-save"></i></button>
