[SAM-7148] Implement addAccount() function

--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -35,7 +35,7 @@
                  [formControl]="textareaControl"
     ></samTextArea>
 
-    <samButton buttonText="Add New Account" (onClick)="saveData()" [buttonType]="(!codeFormGroup.valid || hideAddButton ? 'disabled' : 'default')"></samButton>
+    <samButton buttonText="Add New Account" (onClick)="addAccount()" [buttonType]="(!codeFormGroup.valid ? 'disabled' : 'default')"></samButton>
   </form>
 
 </labelWrapper>
