--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -35,7 +35,16 @@
                  [formControl]="textareaControl"
     ></samTextArea>
 
-    <samButton buttonText="Add New Account" (onClick)="addAccount()" [buttonType]="(!codeFormGroup.valid ? 'disabled' : 'default')"></samButton>
+    <samButton *ngIf="currentIndex === model.accounts.length" buttonText="Add New Account" (onClick)="addAccount()" [buttonType]="(!codeFormGroup.valid ? 'disabled' : 'default')"></samButton>
+    <samButton *ngIf="currentIndex < model.accounts.length" buttonText="Save Account Edits" (onClick)="addAccount()" [buttonType]="(!codeFormGroup.valid ? 'disabled' : 'default')"></samButton>
+
+    <div *ngFor="let account of model.accounts; let i=index">
+      {{ account | json }}
+      <a (click)="removeAccount(i)">Delete</a>
+
+      <a (click)="editAccount(i)">Edit</a>
+    </div>
+
   </form>
 
 </labelWrapper>
