--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -38,6 +38,7 @@
     <samButton *ngIf="currentIndex === model.accounts.length" buttonText="Add New Account" (onClick)="addAccount()" [buttonType]="(!codeFormGroup.valid ? 'disabled' : 'default')"></samButton>
     <samButton *ngIf="currentIndex < model.accounts.length" buttonText="Save Account Edits" (onClick)="addAccount()" [buttonType]="(!codeFormGroup.valid ? 'disabled' : 'default')"></samButton>
 
+    <!-- todo: put into table structure and add styling -->
     <div *ngFor="let account of model.accounts; let i=index">
       {{ account | json }}
       <a (click)="removeAccount(i)">Delete</a>
