--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -48,8 +48,8 @@
           <th scope="col">
             Description
           </th>
-          <th>
-
+          <th scope="col">
+            Actions
           </th>
         </tr>
       </thead>
