[SAM-7148] Ignore default (non-angular) validations

--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -4,7 +4,7 @@
               [hint]="hint"
               [required]="required">
 
-  <form [formGroup]="accountFormGroup">
+  <form novalidate [formGroup]="accountFormGroup">
     <labelWrapper #codeLabel
                   [name]="codeLabelName"
                   [label]="'Code'"
