[SAM-7148] Add skeleton for tafs component and refactors
Renamed samAccountIdentification -> falAccountIdentificationInput

--- a/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
@@ -10,10 +10,14 @@
   <samCheckboxToggledTextarea [options] = "accomplishmentsConfig"
                               [formControlName] = "'accomplishments'"
   ></samCheckboxToggledTextarea>
-  
-  <samAccountIdentification [options] = "accountIdentificationConfig"
-                            [formControlName] = "'accountIdentification'"
-  ></samAccountIdentification>
+
+  <falAccountIdentificationInput [options] = "accountIdentificationConfig"
+                                 [formControlName] = "'accountIdentification'"
+  ></falAccountIdentificationInput>
+
+  <!--todo: tafs component-->
+  <falTAFSInput [name]="'foo'"
+  ></falTAFSInput>
 
   <div *ngIf="tafsGroup" [formGroup]="tafsGroup">
     <samText [label] = "'Treasury Dept. Code'"
