--- a/src/app/role-management/role-maincontent/role-maincontent.template.html
+++ b/src/app/role-management/role-maincontent/role-maincontent.template.html
@@ -10,7 +10,7 @@
           <div class = "section-spc">
             <div class = "usa-grid-full header-bg-color">
               <div class = "usa-width-one-half">
-                <h2 class= "collapsible-header">{{role.role.val}}</h2>
+                <h3 class= "collapsible-header">{{role.role.val}}</h3>
               </div>
               <div class = "usa-width-one-half p_T-1em">
                 <div class = "pull-right">
@@ -55,13 +55,13 @@
       <div class="usa-width-five-sixths">
         <div class = "content-label"><span class="usa-label-big label-ht">{{domain.domain.val}}</span></div>
         <div *ngIf = "!domain.functionMapContent || domain.functionMapContent.length == 0" class = "content-label">
-          <h3><i>No Object found for this domain</i></h3>
+          <h3><i>No objects found for this domain</i></h3>
         </div>
         <div *ngFor = "let func of domain.functionMapContent">
           <div class = "section-spc">
             <div class = "usa-grid-full header-bg-color">
               <div class = "usa-width-one-half">
-                <h2 class= "collapsible-header">{{func.function.val}}</h2>
+                <h3 class= "collapsible-header">{{func.function.val}}</h3>
               </div>
               <div class = "usa-width-one-half p_T-1em">
                 <div class = "pull-right">
