--- a/src/app/role-management/permission-selector/permission-selector.html
+++ b/src/app/role-management/permission-selector/permission-selector.html
@@ -3,31 +3,46 @@
     <strong>{{title}}</strong>
   </div>
   <div class="permissions-body">
+
+    <!-- Column Headers -->
     <div class="usa-grid-full check-all-row permission-row">
       <div class="usa-width-one-twelfth">
         <div class="empty-space">&nbsp;</div>
       </div>
       <div class="usa-width-one-third">
-        <strong>{{selectAllText}}</strong>
+        <strong>Permissions</strong>
+      </div>
+      <div class="usa-width-one-fourth">
+        <strong>Associate</strong>
+      </div>
+      <div class="usa-width-one-fourth">
+         <strong>Default</strong>
       </div>
       <div class="usa-width-one-twelfth">
-        All
-        <div class="pull-right">
-          <input class='check-all' type="checkbox" (click)="onCheckAllClick($event.target.checked)">
-        </div>
+        &nbsp;
       </div>
-      <ng-container *ngIf="!hideDefaultColumn">
-        <div class="usa-width-one-fourth">
-          <strong class="p_L-4x">Make Default</strong>
-        </div>
-        <div class="usa-width-one-twelfth">
-          All
-          <div class="pull-right">
-            <input class='check-all-defaults' type="checkbox" (click)="onCheckAllDefaultClick($event.target.checked)" [(ngModel)]="isAllDefaultsChecked">
-          </div>
-        </div>
-      </ng-container>
     </div>
+
+    <!-- All Column -->
+    <div class="usa-grid-full permission-row">
+      <div class="usa-width-one-twelfth">
+        &nbsp;
+      </div>
+      <div class="usa-width-one-third">
+        <label>All</label>
+      </div>
+      <div class="usa-width-one-fourth">
+        <input type="checkbox" (click)="onCheckAllClick($event.target.checked)" [(ngModel)]="isAllChecked">&nbsp;
+      </div>
+      <div class="usa-width-one-fourth">
+        <input type="checkbox" (click)="onCheckAllDefaultClick($event.target.checked)" [(ngModel)]="isAllDefaultsChecked">&nbsp;
+      </div>
+      <div class="usa-width-one-twelfth">
+        &nbsp;
+      </div>
+    </div>
+
+    <!-- Table Data -->
     <div class="usa-grid-full permission-row" *ngFor="let option of options; let i = index">
       <div class="usa-width-one-twelfth">
         <em *ngIf="option.isNew">New</em>&nbsp;
@@ -35,22 +50,15 @@
       <div class="usa-width-one-third">
         <label [attr.for]="option.label">{{option.label}}&nbsp;</label>
       </div>
-      <div class="usa-width-one-twelfth">        &nbsp;
-        <div class="pull-right">
-          <input [attr.id]='option.label' type="checkbox" (click)="onPermissionClick($event.target.checked, option)" [checked]="option.isSelected">
-        </div>
+      <div class="usa-width-one-fourth">
+        <input [attr.id]='option.label' type="checkbox" (click)="onPermissionClick($event.target.checked, option)" [(ngModel)]="option.isSelected" [disabled]="option.isDefault">&nbsp;
       </div>
-      <ng-container *ngIf="!hideDefaultColumn">
-        <div class="usa-width-one-fourth">
-          &nbsp;
-        </div>
-        <div class="usa-width-one-twelfth">
-          &nbsp;
-          <div class="pull-right">
-            <input type="checkbox" (click)="onDefaultClick($event.target.checked, option)" [disabled]="!option.isSelected" [checked]="option.isDefault">
-          </div>
-        </div>
-      </ng-container>
+      <div class="usa-width-one-fourth">
+        <input type="checkbox" (click)="onDefaultClick($event.target.checked, option)" [(ngModel)]="option.isDefault">&nbsp;
+      </div>
+      <div class="usa-width-one-twelfth">
+        &nbsp;
+      </div>
     </div>
   </div>
 </div>
