--- a/src/app/role-management/role-details/role-details.page.html
+++ b/src/app/role-management/role-details/role-details.page.html
@@ -35,7 +35,7 @@
     <div class="m_T-4x object-block" *ngFor="let function of permissionOptions">
       <permission-selector
         [options]="function.permissions"
-        selectAllText="Associate Permissions"
+        selectAllText="Permissions"
         [title]="function.name"
       ></permission-selector>
     </div>
