--- a/src/app/app-components/feedback-form/feedback-form.template.html
+++ b/src/app/app-components/feedback-form/feedback-form.template.html
@@ -11,7 +11,8 @@
     </div>
 
     <div class="feedback-question-div usa-grid-full m_T-2x m_B-1x m_R-4x">
-      <!--<h4 *ngIf="showEmptyFeedbackWarning && isFeedbackAnswerEmpty()" class="feedback-alert-warning"><i class="fa fa-exclamation-triangle"></i><span>&nbsp;Please provide at least one feedback!</span></h4>-->
+      <h4 *ngIf="(!showEmptyFeedbackWarning || !isFeedbackAnswerEmpty()) && !showThanksNote" class="feedback-alert-placeholder">&nbsp;</h4>
+      <h4 *ngIf="showEmptyFeedbackWarning && isFeedbackAnswerEmpty()" class="feedback-alert-warning">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i><span>&nbsp;Please provide at least one feedback!</span></h4>
 
       <span class="m_T-2x" style="display: block" *ngIf="!showThanksNote">{{curQueIndex+1}}. {{curQuestion.description}}</span>
 
@@ -50,15 +51,13 @@
         </div>
         <div class="usa-width-one-whole">
           <div class="usa-width-two-thirds m_R-0 text-align-center">
-            <span>
-              <span class="usa-input-error-message" *ngIf="isEmailBtnChecked('No') || !isPageEdited(curQueIndex) || !email.errors || !emailModelEdited">&nbsp;</span>
-              <span class="usa-input-error-message" *ngIf="isEmailBtnChecked('Yes') && isPageEdited(curQueIndex) && email.errors && emailModelEdited">Enter a valid email address</span>
-            </span>
-            <input type="email" id="email" name="email" [formControl]="email" class="usa-width-one-whole m_L-3x feedback-email-input" *ngIf="emailRadioBtnValue == 'Yes'" name="text" placeholder="Please provide your email" [(ngModel)]="userEmailModel" (change)="onEmailTextChange()">
-            <h3 *ngIf="!showEmptyFeedbackWarning || !isFeedbackAnswerEmpty()">&nbsp;</h3>
-            <!--<h3 *ngIf="emailRadioBtnValue !== 'Yes'">&nbsp;</h3>-->
-            <!--<h4 *ngIf="showEmptyFeedbackWarning" class="feedback-warning">Please provide at least one feedback!</h4>-->
-            <h4 *ngIf="showEmptyFeedbackWarning && isFeedbackAnswerEmpty()" class="feedback-alert-warning"><i class="fa fa-exclamation-triangle"></i><span>&nbsp;Please provide at least one feedback!</span></h4>
+            <div [ngClass]="{'usa-input-error':isEmailError()}">
+                <span class="usa-input-error-message" *ngIf="!isEmailError()">&nbsp;</span>
+                <span class="usa-input-error-message" *ngIf="isEmailError()">Enter a valid email address</span>
+                <input aria-describedby="input-error-message" type="email" id="email" name="email" [formControl]="email" class="usa-width-one-whole m_L-3x feedback-email-input" *ngIf="emailRadioBtnValue == 'Yes'" placeholder="Please provide your email" [(ngModel)]="userEmailModel" (change)="onEmailTextChange()">
+            </div>
+
+            <h3>&nbsp;</h3>
           </div>
           <div class="usa-width-one-third p_T-6x">
             <button class="usa-button-primary m_0 pull-right" (click)="onSubmitFeedbackClick()">Submit</button>
