--- a/src/styles/components/_feedback-form.scss
+++ b/src/styles/components/_feedback-form.scss
@@ -130,8 +130,18 @@ body.feedback-open {
   .feedback-alert-warning{
     background: #fff1d2;
     height: 36px;
-    font-size: 90%;
     font-weight: 400;
     padding-top: 8px;
+  }
+
+  .feedback-alert-placeholder{
+    height: 36px;
+    font-weight: 400;
+    padding-top: 8px;
+  }
+
+  .usa-input-error{
+    padding-top: 0;
+    border: none;
   }
 }
