include global duns and global vendor fields in header

--- a/src/app/awards/awards.page.html
+++ b/src/app/awards/awards.page.html
@@ -25,8 +25,8 @@
 			<div class="usa-grid-full bottom-border">
 				<div class="usa-width-one-half padding-bottom-10px">
 					DUNS: {{awardData.contractorInformation.duns}}<br />
-					Global Vendor Name: {{globalVendorName}}<br />
-					Global Vendor DUNS: {{globalVendorDUNS}}
+					Global Vendor: {{awardData.contractorInformation.globalVendorName}}<br />
+					Global DUNS: {{awardData.contractorInformation.globalDuns}}
 					<br />
 					<br />
 					<br />
